# hexadroid

./: .gitignore  .gitignore.orig  Cargo.toml  hexadroid-31805bbab0292538.js  hexadroid-3708ac3f0bacf055.js  hexadroid-5de764965728736c.js  hexadroid-8576715dde1167e9.js  hexadroid-eeca665198a3b39c.js  hexadroid-fd4ad5839c6cc935.js  hexadroid.cap  index.html
.cargo/: config  config.toml
.github/workflows/: ci.yml
assets/: my_material.wgsl
src/: camera.rs  collision.rs  debug.rs  debug_ui.rs  droid.rs  edit.rs  game.rs  hexton.rs  input.rs  lib.rs  main.rs  menu.rs  particle.rs  player.rs  portal.rs  render.rs  ship.rs  state.rs  tiles.rs  waypoint.rs  weapon.rs  worldbuild.rs
src/droid/: ai.rs  mod.rs  weapon.rs
src/droid/ai/: actions.rs  scorers.rs
src/render/: mod.rs  mod.rsx  pipeline.rs  shape.wgsl
